--- a/styles/style-grid.css
+++ b/styles/style-grid.css
@@ -1,1 +1,72 @@
 /* add grid styles here */
+
+.testimonial-grid{
+    display: grid;
+    
+    grid-template-areas: 
+    'one'
+    'two'
+    'three'
+    'four'
+    'five';
+}
+
+
+.testimonial:nth-child(3) {
+    background: red;
+}
+
+.testimonial:nth-child(3) {
+    background: red;
+}
+
+
+
+.testimonial:nth-child(1){
+    grid-area: one;
+}
+.testimonial:nth-child(2){
+    grid-area: two;
+}
+.testimonial:nth-child(3){
+    grid-area: three;
+}
+.testimonial:nth-child(4){
+    grid-area: four;
+}
+.testimonial:nth-child(5){
+    grid-area: five;
+}
+@media screen and (min-width: 50em) {
+    .testimonial-grid{
+        grid-template-areas: 
+        'one one two five'
+            'three four four five'
+        ;
+    }
+}
+@media (min-width: 40em ) {
+ .testimonial-grid{
+    grid-auto-columns: 1fr;
+ }
+ .testimonial:last-child {
+    grid-column-start: 4;
+    /*grid-row-start: 1;*/
+    grid-row: 1/3;
+    /*grid-row-end: span 2 ;*/
+    grid-row: 1/ span 2;
+  }
+  .grid-col-span-2 {
+    grid-column: span 2;
+}
+ 
+}
+@media (min-width: 30em) {
+    .testimonial-grid {
+      grid-template-areas: 
+        'one one'
+        'two five'
+        'three five'
+        'four four';
+    }
+  }
